# HumanoidRobotsSimulator

./: .gitignore  CMakeLists.txt  CalcCoM.c  CalcCoM.h  CalcCoMJacobian.c  CalcCoMJacobian.h  CalcCoM_f.c  CalcCoM_f.h  CalcCoP.c  CalcCoP.h  CalcJacobianModif.c  CalcJacobianModif.h  CalcJacobianModif_f.c  CalcJacobianModif_f.h  CalcL.c  CalcL.h  CalcMC.c  CalcMC.h  CalcMC_f.c  CalcMC_f.h  CalcP.c  CalcP.h  CalcVWerrOri.c  CalcVWerrOri_f.c  Commande_f.c  Connect3D.c  Connect3D.h  Contact.m  Cross.c  Cross.h  Cross_f.c  Cross_f.h  David_CalcCoM.c  David_CalcCoM.h  David_CalcMC.c  David_CalcMC.h  David_Commande.c  David_Cross.c  David_Cross.h  David_FindMother.c  (+168 more)
Documentation/html/: _calc_co_m_8c.html  _calc_co_m_8c__incl.map  _calc_co_m_8c__incl.md5  _calc_co_m_8c_a02ae60f79cbcfde98d1451065cf394c7_icgraph.map  _calc_co_m_8c_source.html  _calc_co_m_8h.html  _calc_co_m_8h__dep__incl.map  _calc_co_m_8h__dep__incl.md5  _calc_co_m_8h__incl.md5  _calc_co_m_8h_a02ae60f79cbcfde98d1451065cf394c7_cgraph.map  _calc_co_m_8h_a02ae60f79cbcfde98d1451065cf394c7_cgraph.md5  _calc_co_m_8h_a02ae60f79cbcfde98d1451065cf394c7_icgraph.md5  _calc_co_m_8h_source.html  _calc_co_m__f_8c.html  _calc_co_m__f_8c__incl.map  _calc_co_m__f_8c__incl.md5  _calc_co_m__f_8c_a6b3314658b4ac9d7dd085407876acff4_cgraph.md5  _calc_co_m__f_8c_a8fea9bef886765bbb3aba70734b500a9_cgraph.map  _calc_co_m__f_8h.html  _calc_co_m__f_8h__dep__incl.map  _calc_co_m__f_8h__dep__incl.md5  _calc_co_m__f_8h_a6b3314658b4ac9d7dd085407876acff4_cgraph.map  _calc_co_m__f_8h_a6b3314658b4ac9d7dd085407876acff4_icgraph.map  _calc_co_m__f_8h_a6b3314658b4ac9d7dd085407876acff4_icgraph.md5  _calc_co_m__f_8h_a8fea9bef886765bbb3aba70734b500a9_cgraph.md5  _calc_co_m__f_8h_a8fea9bef886765bbb3aba70734b500a9_icgraph.map  _calc_co_m__f_8h_a8fea9bef886765bbb3aba70734b500a9_icgraph.md5  _calc_co_m__f_8h_source.html  _calc_co_m_jacobian_8c.html  _calc_co_m_jacobian_8c__incl.map  _calc_co_m_jacobian_8c__incl.md5  _calc_co_m_jacobian_8c_a1b20a39ef175ddaa4bdd92678d069644_icgraph.map  _calc_co_m_jacobian_8c_a1b20a39ef175ddaa4bdd92678d069644_icgraph.md5  _calc_co_m_jacobian_8h.html  _calc_co_m_jacobian_8h__dep__incl.map  _calc_co_m_jacobian_8h__dep__incl.md5  _calc_co_m_jacobian_8h__incl.md5  _calc_co_m_jacobian_8h_a130b355d314941eefa12b0dd86dec640_cgraph.md5  _calc_co_m_jacobian_8h_a2bcf1b3acdaff546e318328d440b9515_cgraph.map  _calc_co_m_jacobian_8h_a2bcf1b3acdaff546e318328d440b9515_cgraph.md5  (+1693 more)
Documentation/latex/: _calc_co_m_8c.tex  _calc_co_m_8c__incl.md5  _calc_co_m_8h.tex  _calc_co_m_8h__dep__incl.md5  _calc_co_m_8h__incl.md5  _calc_co_m_8h_a02ae60f79cbcfde98d1451065cf394c7_cgraph.md5  _calc_co_m_8h_a02ae60f79cbcfde98d1451065cf394c7_icgraph.md5  _calc_co_m__f_8c.tex  _calc_co_m__f_8c__incl.md5  _calc_co_m__f_8c_a6b3314658b4ac9d7dd085407876acff4_icgraph.md5  _calc_co_m__f_8h.tex  _calc_co_m__f_8h__dep__incl.md5  _calc_co_m__f_8h_a6b3314658b4ac9d7dd085407876acff4_cgraph.md5  _calc_co_m_jacobian_8c.tex  _calc_co_m_jacobian_8c__incl.md5  (+695 more)
Robots/: Ahmed.xml  HOAP.xml  HOAP3.xml  HOAP3v2.xml  HOAP3v3.xml  HOAP3v4.xml  HOAP3v5.xml  HOAP3v6.xml  HOAP3v7.xml  Hrp2_10.xml  Human.xml  RobotGeneric.xml  RobotHydroid.xml  RobotSherpa.xml  RobotSherpav2.xml  box.xml
Trajectories/: Hoap_Walk.txt  Hoap_Walk2.txt  Hoap_Walk3.txt  Hoap_Walk4.txt  Human_op.txt  Human_op2.txt  Human_op3.txt  Human_q.txt  Human_q2.txt  Human_q3.txt  LIPM_op.txt  Lip3d2.m  PenduleODEx.m  dblperso.rar  humanVisu.m  m03.csv  static.m  tcp.m  walk.m  walk_pend.m  walk_slow.m
ezxml/: ezxml.c
plot/: q.eps
research/: MGI.mw  Taches.mw  mgi.m
src/: CalcCoM.cpp  CalcCoMJacobian.cpp  CalcCoM_f.c  CalcCoP.h  CalcJacobianModif.c  CalcMC_f.c  Cross.h  DefaultShaders.h  DrawAllJoints.cpp  DrawCamera.cpp  DrawCamera.h  DrawCylinder.cpp  DrawForceMarker.cpp  DrawGround.cpp  DrawGround.h  DrawLight.c  DrawLight.cpp  DrawLight.h  DrawMarker.cpp  DrawMarkerf.cpp  DrawPolygon.cpp  DrawPolygon.h  DrawScene.c  DrawScene.cpp  Ext_traj.c  Ext_traj.cpp  ExternalForces.cpp  FindMother_f.h  FindRoute.h  ForwardAllKinematics.cpp  ForwardDynamics.c  ForwardDynamics.cpp  ForwardDynamics.h  ForwardDynamicsWorkspace.c  ForwardDynamicsWorkspace.h  Gravity.c  Hat.cpp  Hoap_calc_zmp.cpp  Hoap_calc_zmp.h  LoadRobot.cpp  (+35 more)
(+378 files in other folders)
